feat: update style for alert messages

--- a/client/src/components/Flash/flash.css
+++ b/client/src/components/Flash/flash.css
@@ -1,10 +1,10 @@
 /*
-For some reason this `div` is needed in order to overidde
-the CSS rules of `ui-components`'s Alert.
+  For some reason this `div` is needed in order to override
+  the CSS rules of `ui-components`'s Alert.
 */
 div.flash-message {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: row;
   padding-top: 3px;
   padding-bottom: 3px;
